simple-ingress/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      pod: nginx-pod
  replicas: 1
  template:
    metadata:
      name: nginx-pod
      labels:
        pod: nginx-pod
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
              name: http-web-svc
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    pod: nginx-pod
  ports:
    - name: http-web-svc
      protocol: TCP
      port: 80
      targetPort: http-web-svc
