simple-ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: /nginx(.*)
            backend:
              service:
                name: nginx-svc
                port:
                  name: http-web-svc
          - pathType: ImplementationSpecific
            path: /tomcat(.*)
            backend:
              service:
                name: tomcat-svc
                port:
                  name: http-web-svc
